# paper_scan

./: .env_example  .pre-commit-config.yaml  Cargo.toml  README.md  prompts.txt
src/: arxiv.rs  downloader.rs  extractor.rs  llm_client.rs  main.rs  note_generator.rs  processor.rs
