[package]
name = "paper_scan"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.35", features = ["full"] }
backoff = { version = "0.4", features = ["tokio"] }
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
regex = "1.10"
walkdir = "2.4"
uuid = { version = "1.6", features = ["v4"] }
tempfile = "3.8"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
dotenv = "0.15"
chrono = "0.4"
futures = "0.3"

[[bin]]
name = "paper_scan"
path = "src/main.rs"